Readd automatic asset extraction and fix dependenncy issues.