@@ -10,7 +10,12 @@ import java.awt.event.ComponentAdapter;
 import java.awt.event.ComponentEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.nio.file.Paths;
+
+import java.net.URL;
+import java.nio.file.*;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Predicate;
 
 import de.heisluft.classiclauncher.awt.MCAppletStub;
 import org.apache.logging.log4j.LogManager;
@@ -19,6 +24,7 @@ import org.apache.logging.log4j.Logger;
 public class LaunchHandlerService implements ILaunchHandlerService {
 
   private final Logger logger = LogManager.getLogger("ClassicLauncher");
+  public static final Map<String, ?> PROP_MAP = Map.of("create", "true");
 
   @Override
   public String name() {
@@ -34,7 +40,18 @@ public class LaunchHandlerService implements ILaunchHandlerService {
   public ServiceRunner launchService(String[] arguments, ModuleLayer gameLayer) {
 
     return () -> {
-      String libspath = Paths.get("build/natives").toAbsolutePath().toString();
+      Path libsDir = Path.of("libs");
+      if(!Files.isDirectory(libsDir)) Files.createDirectories(libsDir);
+      List<Path> children = Files.walk(libsDir).filter(Predicate.not(libsDir::equals)).toList();
+      String osName = System.getProperty("os.name").toLowerCase();
+      Natives natives = osName.contains("win") ? Natives.WIN : osName.contains("mac") ? Natives.MAC : Natives.LINUX;
+      if(children.size() < natives.fileCount){
+        for(URL url : natives.getURLs()) {
+          String urlString = url.toString();
+          Files.write(libsDir.resolve(urlString.substring(urlString.lastIndexOf('/') + 1)), url.openStream().readAllBytes());
+        }
+      }
+      String libspath = libsDir.toAbsolutePath().toString();
       System.setProperty("org.lwjgl.librarypath", libspath);
       System.setProperty("net.java.games.input.librarypath", libspath);
       final Frame launcherFrameFake = new Frame();
@@ -55,7 +72,6 @@ public class LaunchHandlerService implements ILaunchHandlerService {
       if(clazz == null) {
         clazz = Class.forName(mcModule, "com.mojang.minecraft.MinecraftApplet");
       }
-      System.out.println(clazz.getClassLoader());
 
       Applet applet = (Applet) clazz.getConstructor().newInstance();
       applet.setPreferredSize(launcherFrameFake.getSize());
